--- a/battleplankit/package.json
+++ b/battleplankit/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-canvas-paint": "^1.0.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
