--- a/battleplankit/package.json
+++ b/battleplankit/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-canvas-paint": "^1.0.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
+    "sass": "^1.60.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
