--- a/battleplankit/package.json
+++ b/battleplankit/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "netlify-cli": "^13.2.1",
     "react": "^18.2.0",
     "react-canvas-paint": "^1.0.1",
     "react-dom": "^18.2.0",
