--- a/battleplankit/package.json
+++ b/battleplankit/package.json
@@ -12,6 +12,8 @@
     "netlify-cli": "^13.2.1",
     "react": "^18.2.0",
     "react-canvas-paint": "^1.0.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "sass": "^1.60.0"
