--- a/battleplankit/package.json
+++ b/battleplankit/package.json
@@ -16,7 +16,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
