--- a/battleplankit/package.json
+++ b/battleplankit/package.json
@@ -25,11 +25,13 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "cspell": "^9.2.1",
     "eslint": "^9.37.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
     "globals": "^16.4.0",
+    "markdownlint-cli": "^0.45.0",
     "vite": "^3.2.3"
   }
 }
