--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -29,7 +29,7 @@ jobs:
           cache-dependency-path: 'package-lock.json'  # lockfile is in current dir
 
       - name: Install deps
-        run: npm ci --no-optional
+        run: npm ci
 
       - name: Run linter
         run: npm run lint
